[gd_scene load_steps=3 format=2]

[ext_resource path="res://Server.gd" type="Script" id=1]
[ext_resource path="res://Fonts/test_font.tres" type="DynamicFont" id=2]

[node name="Server" type="Node"]
script = ExtResource( 1 )

[node name="StatusLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="UserCountLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
max_lines_visible = 0

[node name="Players" type="Node" parent="."]

[node name="InGame" type="Node" parent="."]

[node name="GameSession" type="Node" parent="."]

[node name="Reset" type="Button" parent="."]
margin_left = 337.0
margin_top = 251.0
margin_right = 654.0
margin_bottom = 331.0
custom_fonts/font = ExtResource( 2 )
text = "Reset"
[connection signal="pressed" from="Reset" to="." method="_on_Reset_pressed"]
